# FitnessApp

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  init_db.py  pyproject.toml  requirements.txt  server.py  test_openai.py  uvicorn_config.py
backend/models/: __init__.py  audit_log.py  body_metrics.py  meal_plan.py  progress_tracking.py  settings.py  training_plan.py  user.py
backend/services/: brevo_init.py  contactus_form.py  email_template.py  invite_email.py  openai_service.py  send_mail.py  subscription_service.py  tmp.py  training_plan_service.py
web-frontend/: .dockerignore  Dockerfile  default.conf  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-frontend/public/: site.webmanifest
web-frontend/src/: App.jsx  i18n.js  index.css  main.jsx
web-frontend/src/components/: Error404.jsx  Footer.jsx  Header.jsx  LanguageSwitcher.jsx  Particles.jsx  Preloader.jsx  TrustPilotWiget.jsx
web-frontend/src/config/: api.js  axios.js  index.js
web-frontend/src/context/: ThemeContext.jsx
web-frontend/src/locales/: bg.json  en.json
web-frontend/src/styles/: AuthPage.css  Careers.css  CoachDashboard.css  ContactPage.css  Error.css  FeatureCard.css  FeaturesPage.css  Footer.css  HeroSection.css  Home.css  HomeFeatures.css  HomePartners.css  HomePopUp.css  HowItWorks.css  MainNavbar.css  MobileButtons.css  PlatformUpdates.css  Preloader.css  PrisingPage.css  SubscriptionPlans.css  Testimonials.css  WhyChooseUs.css  layout.css  main.css  privacy-policy.css
(+71 files in other folders)
